--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"csv-loader": "^3.0.2",
 		"file-loader": "^6.0.0",
 		"html-webpack-plugin": "^4.2.0",
+		"mini-css-extract-plugin": "^0.9.0",
 		"style-loader": "^1.1.3",
 		"webpack": "^4.42.1",
 		"webpack-cli": "^3.3.11",
@@ -30,6 +31,7 @@
 	},
 	"dependencies": {
 		"react": "^16.13.1",
-		"react-dom": "^16.13.1"
+		"react-dom": "^16.13.1",
+		"react-hot-loader": "^4.12.20"
 	}
 }
