--- a/package.json
+++ b/package.json
@@ -1,37 +1,46 @@
 {
-	"name": "webpack-boilerplate",
-	"version": "1.0.0",
-	"description": "",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"watch": "webpack --watch",
-		"start": "webpack-dev-server --open --config webpack.dev.js",
-		"build": "webpack --config webpack.prod.js"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@babel/core": "^7.9.0",
-		"@babel/preset-env": "^7.9.5",
-		"@babel/preset-react": "^7.9.4",
-		"babel-loader": "^8.1.0",
-		"clean-webpack-plugin": "^3.0.0",
-		"css-loader": "^3.5.2",
-		"csv-loader": "^3.0.2",
-		"file-loader": "^6.0.0",
-		"html-webpack-plugin": "^4.2.0",
-		"mini-css-extract-plugin": "^0.9.0",
-		"style-loader": "^1.1.3",
-		"webpack": "^4.42.1",
-		"webpack-cli": "^3.3.11",
-		"webpack-dev-server": "^3.10.3",
-		"webpack-merge": "^4.2.2",
-		"xml-loader": "^1.2.1"
-	},
-	"dependencies": {
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"react-hot-loader": "^4.12.20"
-	}
+  "name": "webpack-boilerplate",
+  "version": "1.0.0",
+  "description": "",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "lint": "eslint src",
+    "lint-fix": "eslint src/* src/**/** --fix; exit 0",
+    "format": "prettier src/**/*.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "chalk": "^4.0.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.5.2",
+    "csv-loader": "^3.0.2",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^4.0.0",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "prettier": "^2.0.4",
+    "progress": "^2.0.3",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2",
+    "xml-loader": "^1.2.1"
+  },
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-hot-loader": "^4.12.20"
+  }
 }
