--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --watch",
+    "watch": "node_modules/.bin/webpack --watch",
     "start": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
-    "lint": "eslint src",
-    "lint-fix": "eslint src/* src/**/** --fix; exit 0",
-    "format": "prettier src/**/*.js"
+    "build": "node_modules/.bin/webpack --config webpack.prod.js",
+    "lint": "./node_modules/.bin/eslint src/**/**.jsx",
+    "lint-fix": "./node_modules/.bin/eslint src/**/**.jsx --fix"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +24,15 @@
     "css-loader": "^3.5.2",
     "csv-loader": "^3.0.2",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-standard": "^14.1.1",
     "eslint-loader": "^4.0.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-standard": "^4.0.1",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.0",
     "mini-css-extract-plugin": "^0.9.0",
