--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@babel/preset-react": "^7.9.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "chalk": "^4.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.2",
     "csv-loader": "^3.0.2",
+    "error-overlay-webpack-plugin": "^0.4.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-config-standard": "^14.1.1",
@@ -37,7 +37,6 @@
     "html-webpack-plugin": "^4.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^2.0.4",
-    "progress": "^2.0.3",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
@@ -46,6 +45,7 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
+    "eslint-plugin-react-hooks": "0.0.0-d7382b6c4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.20"
