--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,23 @@
-# Created by https://www.gitignore.io/api/react
-# Edit at https://www.gitignore.io/?templates=react
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
+# testing
+/coverage
 
-### react ###
-.DS_*
-*.log
-logs
-**/*.backup.*
-**/*.back.*
+# production
+/build
 
-node_modules
-bower_components
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-dist
-
-*.sublime*
-
-psd
-thumb
-sketch
-
-# End of https://www.gitignore.io/api/react
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
