--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.2",
     "csv-loader": "^3.0.2",
     "error-overlay-webpack-plugin": "^0.4.1",
